# autoware

./: .ansible-lint  .clang-format  .clang-tidy  .clang-tidy-ci  .cppcheck_suppressions  .cspell-partial.json  .cspell.json  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .hadolint.yaml  .markdown-link-check.json  .markdownlint.yaml  .pages  .pre-commit-config-ansible.yaml  .pre-commit-config-optional.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .rgignore  .shellcheckrc  .travis.bash  .travis.yml  .webauto-ci.yaml  .yamllint.yaml  AGENTS.md  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  DISCLAIMER.md  LICENSE  NOTICE  README.md  README.rst  SUPPORT.md  THANKS  abc.txt  amd64-jazzy.env  (+35 more)
awapi/awapi_awiv_adapter/: CMakeLists.txt  Readme.md  package.xml
awapi/awapi_awiv_adapter/launch/: awapi_awiv_adapter.launch.xml  awapi_relay_container.launch.py
awapi/awapi_awiv_adapter/src/: awapi_autoware_state_publisher.cpp  awapi_autoware_util.cpp  awapi_awiv_adapter_core.cpp  awapi_awiv_adapter_node.cpp  awapi_lane_change_state_publisher.cpp  awapi_max_velocity_publisher.cpp  awapi_obstacle_avoidance_state_publisher.cpp  awapi_pacmod_util.cpp  awapi_stop_reason_aggregator.cpp  awapi_v2x_aggregator.cpp  awapi_vehicle_state_publisher.cpp
common/autoware_ad_api_msgs/: CMakeLists.txt  README.md  package.xml
common/autoware_ad_api_specs/: CMakeLists.txt  README.md  package.xml
common/autoware_api_utils/: CMakeLists.txt  package.xml
common/autoware_api_utils/test/: test.cpp
common/autoware_auto_cmake/: CMakeLists.txt  autoware_auto_cmake-extras.cmake  package.xml
common/autoware_auto_cmake/cmake/: autoware_auto_cmake.cmake
common/autoware_auto_cmake/design/: autoware_auto_cmake-design.md
common/autoware_auto_common/: CMakeLists.txt  package.xml
common/autoware_auto_common/design/: comparisons.md
common/autoware_auto_common/test/: gtest_main.cpp  test_angle_utils.cpp  test_bool_comparisons.cpp  test_byte_reader.cpp  test_float_comparisons.cpp  test_mahalanobis_distance.cpp  test_message_field_adapters.cpp  test_template_utils.cpp  test_type_name.cpp  test_type_traits.cpp
common/autoware_auto_geometry/: CMakeLists.txt  package.xml
common/autoware_auto_geometry/design/: interval.md  polygon_intersection_2d-design.md  spatial-hash-design.md
common/autoware_auto_geometry/src/: bounding_box.cpp  spatial_hash.cpp
common/autoware_auto_perception_rviz_plugin/: CMakeLists.txt  README.md  package.xml  plugins_description.xml
common/autoware_auto_perception_rviz_plugin/include/: visibility_control.hpp
common/autoware_auto_tf2/: CMakeLists.txt  package.xml
common/autoware_auto_tf2/design/: autoware-auto-tf2-design.md
common/autoware_auto_tf2/test/: test_tf2_autoware_auto_msgs.cpp
common/autoware_datetime_rviz_plugin/: CMakeLists.txt  README.md  package.xml
common/autoware_datetime_rviz_plugin/plugins/: plugin_description.xml
common/autoware_datetime_rviz_plugin/src/: autoware_datetime_panel.cpp  autoware_datetime_panel.hpp
common/autoware_debug_tools/: CMakeLists.txt  README.md  package.xml
common/autoware_debug_tools/launch/: lateral_error_publisher.launch.xml
common/autoware_debug_tools/scripts/: stop_reason2pose.py  stop_reason2tf  tf2pose.py
common/autoware_debug_tools/src/: lateral_error_publisher.cpp
common/autoware_geography_utils/: CMakeLists.txt  README.md  package.xml
common/autoware_geography_utils/src/: height.cpp  lanelet2_projector.cpp  projection.cpp
common/autoware_geography_utils/test/: test_geography_utils.cpp  test_height.cpp  test_projection.cpp
common/autoware_grid_map_utils/: CMakeLists.txt  README.md  package.xml
common/autoware_grid_map_utils/src/: polygon_iterator.cpp
common/autoware_grid_map_utils/test/: benchmark.cpp  test_polygon_iterator.cpp
common/autoware_kalman_filter/: CMakeLists.txt  README.md  package.xml
common/autoware_kalman_filter/src/: kalman_filter.cpp  time_delay_kalman_filter.cpp
common/autoware_kalman_filter/test/: test_kalman_filter.cpp  test_time_delay_kalman_filter.cpp
common/autoware_localization_rviz_plugin/: CMakeLists.txt  README.md  package.xml
common/autoware_localization_rviz_plugin/plugins/: plugin_description.xml
jsk_recognition_utils/: package.xml
jsk_recognition_utils/include/jsk_recognition_utils/: geo_util.h  types.h  (+1 more)
jsk_recognition_utils/src/: grid_line.cpp  grid_map.cpp  pcl_conversion_util.cpp  sensor_model_utils.cpp
jsk_rqt_plugins/: doc  package.xml
jsk_rqt_plugins/resource/: service_button_layout.yaml
jsk_rviz_plugins/: CMakeLists.txt  doc  mainpage.dox  package.xml
jsk_rviz_plugins/cfg/: normal_sample.rviz
jsk_rviz_plugins/launch/: boundingbox_sample.launch
jsk_rviz_plugins/msg/: ObjectFitCommand.msg  OverlayText.msg  PictogramArray.msg
jsk_rviz_plugins/samples/: bounding_box_sample.py  contact_state_sample.py  sparse_occupancy_grid_sample.py
jsk_rviz_plugins/scripts/: capture_rviz_text.py  pr2_visualization.py  twist_stamped_add_header.py
jsk_rviz_plugins/src/: ambient_sound_display.h  cancel_action.cpp  cancel_action.h  empty_service_call_interface.cpp  normal_display.cpp  overlay_diagnostic_display.h  overlay_image_display.h  people_position_measurement_array_display.h  pictogram_array_display.h  pie_chart_display.h  polygon_array_display.cpp  publish_topic.h  quiet_interactive_marker_display.cpp  quiet_interactive_marker_display.h  select_point_cloud_publish_action.h  simple_occupancy_grid_array_display.h  tablet_controller_panel.cpp  target_visualizer_display.h  tf_trajectory_display.h  torus_array_display.cpp  video_capture_display.cpp
velodyne/: CHANGELOG.rst  package.xml
velodyne_driver/: CHANGELOG.rst  package.xml
velodyne_driver/src/: vdump
velodyne_msgs/: CHANGELOG.rst  package.xml
velodyne_pointcloud/: CHANGELOG.rst  package.xml
velodyne_pointcloud/launch/: 64e_S3.launch  VLP16_points.launch
velodyne_pointcloud/params/: 32db.yaml  64e_s2.1-sztaki.yaml  64e_s3-xiesc.yaml  64e_utexas.yaml  VLP16_hires_db.yaml
velodyne_pointcloud/tests/: angles.yaml  issue_84_float_intensities.yaml
(+12575 files in other folders)
