<?xml version="1.0"?>
<package format="2">
  <name>velodyne</name>
  <version>1.5.2</version>
  <description>
    Basic ROS support for the Velodyne 3D LIDARs.
  </description>
  <maintainer email="jwhitley@autonomoustuff.com">Josh Whitley</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/velodyne</url>
  <url type="repository">https://github.com/ros-drivers/velodyne</url>
  <url type="bugtracker">https://github.com/ros-drivers/velodyne/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_laserscan</exec_depend>
  <exec_depend>velodyne_msgs</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
