<?xml version="1.0"?>
<package format="2">
  <name>velodyne_driver</name>
  <version>1.5.2</version>
  <description>
    ROS device driver for Velodyne 3D LIDARs.
  </description>
  <maintainer email="jwhitley@autonomoustuff.com">Josh Whitley</maintainer>
  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>
  <author>Jack O'Quin</author>
  <author>Patrick Beeson</author>
  <author>Michael Quinlan</author>
  <author>Yaxin Liu </author>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/velodyne_driver</url>
  <url type="repository">https://github.com/ros-drivers/velodyne</url>
  <url type="bugtracker">https://github.com/ros-drivers/velodyne/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>libpcap</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>velodyne_msgs</depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_velodyne.xml"/>
  </export>
</package>
