<?xml version="1.0"?>
<package format="2">
  <name>velodyne_msgs</name>
  <version>1.5.2</version>
  <description>
    ROS message definitions for Velodyne 3D LIDARs.
  </description>
  <maintainer email="jwhitley@autonomoustuff.com">Josh Whitley</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/velodyne_msgs</url>
  <url type="repository">https://github.com/ros-drivers/velodyne</url>
  <url type="bugtracker">https://github.com/ros-drivers/velodyne/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
