<?xml version="1.0"?>
<package format="2">
  <name>velodyne_pointcloud</name>
  <version>1.5.2</version>
  <description>
    Point cloud conversions for Velodyne 3D LIDARs.
  </description>
  <maintainer email="jwhitley@autonomoustuff.com">Josh Whitley</maintainer>
  <author>Jack O'Quin</author>
  <author>Piyush Khandelwal</author>
  <author>Jesse Vera</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/velodyne_pointcloud</url>
  <url type="repository">https://github.com/ros-drivers/velodyne</url>
  <url type="bugtracker">https://github.com/ros-drivers/velodyne/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>nodelet</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>velodyne_driver</depend>
  <depend>velodyne_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>dynamic_reconfigure</depend>

  <exec_depend>velodyne_laserscan</exec_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>tf2_ros</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
