<?xml version="1.0"?>
<package format="2">
  <name>awapi_awiv_adapter</name>
  <version>0.1.0</version>
  <description>The awapi_awiv_adapter package</description>
  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <author email="tomoya.kimura@tier4.jp">Tomoya Kimura</author>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_system_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>autoware_iv_auto_msgs_converter</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pacmod3_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tier4_api_msgs</depend>
  <depend>tier4_control_msgs</depend>
  <depend>tier4_external_api_msgs</depend>
  <depend>tier4_planning_msgs</depend>
  <depend>tier4_v2x_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>

  <exec_depend>autoware_auto_perception_msgs</exec_depend>
  <exec_depend>tier4_perception_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
