<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>autoware_api_utils</name>
  <version>0.0.0</version>
  <description>The autoware_api_utils package</description>
  <maintainer email="isamu.takagi@tier4.jp">Takagi, Isamu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_external_api_msgs</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_external_api_msgs</test_depend>
  <test_depend>autoware_lint_common</test_depend>
  <test_depend>rclcpp</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
