<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_auto_common</name>
  <version>1.0.0</version>
  <description>Miscellaneous helper functions</description>
  <maintainer email="opensource@apex.ai">Apex.AI, Inc.</maintainer>
  <maintainer email="tomoya.kimura@tier4.jp">Tomoya Kimura</maintainer>
  <maintainer email="shumpei.wakabayashi@tier4.jp">Shumpei Wakabayashi</maintainer>
  <maintainer email="satoshi.ota@tier4.jp">Satoshi Ota</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>eigen</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>
  <test_depend>geometry_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
