<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_auto_geometry</name>
  <version>1.0.0</version>
  <description>Geometry related algorithms</description>
  <maintainer email="satoshi.ota@tier4.jp">Satoshi Ota</maintainer>
  <license>Apache License 2.0</license>

  <author email="opensource@apex.ai">Apex.AI, Inc.</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_auto_common</depend>
  <depend>autoware_auto_geometry_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_tf2</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>
  <test_depend>osrf_testing_tools_cpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
